...
    lateinit var rf: RFID

    //ui parameters
    var loading by mutableStateOf(false)
    var uiList = mutableStateListOf<Product>()
    private var scanningMode by mutableStateOf(true)
    private var destination by mutableStateOf("انتخاب مقصد")
    var products = mutableListOf<Product>()
    private var stockDraftSpec by mutableStateOf("")
    private var scanTypeValue by mutableStateOf("بارکد")
    private var printers = mutableStateMapOf<String, Int>()
    private var printer by mutableStateOf("")
    private var openPrintDialog by mutableStateOf(false)
    private var popupState = NotificationPopupHost()
    private var scannedNumber by mutableIntStateOf(0)
    private var sortedDestinationsTitlesList = mutableStateListOf<String>()
...
    override fun onResume() {
        super.onResume()
        state.currentSnackbarData?.dismiss()
        if (!barcode.isConnectedToContext) {
            barcode.connectWithContext()
        }
        if (scanTypeValue == "RFID" || !scanningMode) {
            barcode.disable()
        }
    }

    private fun printLabel() {

...
                                    tint = Color.Unspecified,
                                    modifier = Modifier.align(Alignment.Center)
                                )
                            }

                            Text(
                                "هنوز کالایی برای ثبت حواله اسکن نکرده اید",
                                style = MaterialTheme.typography.headlineMedium,
                                textAlign = TextAlign.Center,
                                modifier = Modifier.padding(top = 16.dp, start = 4.dp, end = 4.dp),
                            )
                        }
                    }
                } else {

                    LazyColumn(modifier = Modifier.padding(bottom = 56.dp)) {

                        items(uiList.size) { i ->
                            LazyColumnItem(i)
                        }
                    }
                }
            }
        }
...

            Column {
                NotificationPopUp(popupState)
                if (openPrintDialog) {
                    AlertDialogWithHeadlineMediumButtonDropDownList(
                        title = "لطفا پرینتر مورد نظر خود را مشخص کنید ",
                        btnTxt = "تایید",
                        btnOnClick = {
                            openPrintDialog = false
                            createStockDraft()
                        },
                        dropDownText = printer,
                        onDismiss = { openPrintDialog = false },
...
