...
 * @param state The [SnackbarHostState] that manages the display of the snackbar.  The message
 *              displayed in the snackbar will be taken from `state.currentSnackbarData?.visuals?.message`,
 *              and the color will be determined based on `state.currentSnackbarData?.visuals?.actionLabel`.
 *              If the action label is "ERROR", the color will be [errorLight].  If it is "SUCCESS",
 *              the color will be [doneColor].  If it is "WARNING", the color will be [warningColor].
 *              Otherwise, the color defaults to [errorLight]. The snackbar will also include a
 *              dismiss button labeled "متوجه شدم" (Understood).
 */
@Composable
fun ErrorSnackBar(state: SnackbarHostState) {

    Column(
        modifier = Modifier
...
