...
                                Button(
                                    onClick = {
                                        view.createShelf()
                                    },
                                    modifier = Modifier
                                        .padding(top = 10.dp)
                                        .testTag("alertBtn")
                                        .align(Alignment.CenterVertically)
                                ) {
                                    Text(
                                        text = "ایجاد قفسه",
                                        style = MaterialTheme.typography.labelSmall
                                    )
...
